updated pages with userPosts

--- a/Website Project/landingPageUser.html
+++ b/Website Project/landingPageUser.html
@@ -14,7 +14,7 @@
     <div class="intro">
         <a href="landingPage.html"><img src="images/logo_2.png" class="logo"></a>
         <div class="log_or_reg">
-            <button class="user_icon"><img src ="images/person.svg" /></button>
+            <a href="userPosts.html"><button class="user_icon"><img src ="images/person.svg" /></button></a>
 
         </div>
     </div>
