update 4 with login page

--- a/Website Project/landingPage.html
+++ b/Website Project/landingPage.html
@@ -13,7 +13,7 @@
     <div class="intro">
         <a href="landingPage.html"><img src="images/logo_2.png" class="logo"></a>
         <div class="log_or_reg">
-           <a href ="landingPageUser.html"> <button class="login_button">Login</button></a>
+           <a href ="loginPage.html"> <button class="login_button">Login</button></a>
             <a href="newregistration.html"><button class="register_button">Register
                 </button></a>
 
