--- a/AdminTransactions.html
+++ b/AdminTransactions.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style2.css">
 </head>
 <body>
+
+	<!-- Hamburger Menu Setup -->
     <header>
         <h1>View Tutelage Transactions</h1>
         <div class="pure-menu pure-menu-horizontal">
@@ -76,7 +78,7 @@
             </tr>
             <tr>
                 <td>2025-02-24</td>
-                <td>Luffy</td>
+                <td>Monkey D. Luffy</td>
 				<td><img src="imagesa/student_3.jpg" alt="Monkey D. Luffy" class="transaction-img"></td>
                 <td>Doctor Boom</td>
                 <td><img src="imagesa/prof_16.jpeg" alt="Doctor Boom" class="transaction-img"></td>
@@ -87,11 +89,11 @@
         </table>
     </main>
 
+	<!-- Hamburger Menu Toggling -->
     <script>
-        // Toggle hamburger menu visibility
         document.getElementById('menuLink1').addEventListener('click', function() {
             var menu = document.getElementById('adminMenu');
-            menu.classList.toggle('show'); // Add or remove 'show' class to toggle visibility
+            menu.classList.toggle('show');
         });
     </script>
 </body>
