--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style2.css">
-    <script defer src="script.js"></script> <!-- Link JavaScript -->
 </head>
 
 <body>
 
+	<!-- Hamburger Menu Setup -->
     <header>
         <h1>Admin Dashboard</h1>
         <div class="pure-menu pure-menu-horizontal">
@@ -59,11 +59,11 @@
         </div>
     </footer>
 
+	<!-- Hamburger Menu Toggling -->
     <script>
-        // Toggle hamburger menu visibility
         document.getElementById('menuLink1').addEventListener('click', function() {
             var menu = document.getElementById('adminMenu');
-            menu.classList.toggle('show'); // Add or remove 'show' class to toggle visibility
+            menu.classList.toggle('show');
         });
     </script>
 
