--- a/AdminListings.html
+++ b/AdminListings.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manage Listings</title>
     <link rel="stylesheet" href="style2.css">
-    <script defer src="script.js"></script> <!-- Link JavaScript -->
 </head>
 <body>
 
 	<header>
+		<!-- Hamburger Menu Setup -->
 		<h1>Manage Tutelage Listings</h1>
 		<div class="pure-menu pure-menu-horizontal">
 			<ul class="pure-menu-list">
@@ -63,11 +63,11 @@
 		</div>
 	</footer>
 	
+	<!-- Hamburger Menu Toggling -->
 	<script>
-        // Toggle hamburger menu visibility
         document.getElementById('menuLink1').addEventListener('click', function() {
             var menu = document.getElementById('adminMenu');
-            menu.classList.toggle('show'); // Add or remove 'show' class to toggle visibility
+            menu.classList.toggle('show');
         });
     </script>
 
